# smart-sql

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY_2025_01_12.md  MULTI_CONNECTION_COMPLETED.md  PROGRESS_SUMMARY_2025_01_12.md  README.md  TASK_COMPLETION_REPORT.md  VERIFICATION_CHECKLIST_2025_01_12.md  VERIFICATION_REPORT.md  WEEK_8.1.6_COMPLETION.md  WEEK_8.2.5_8.2.6_TABLE_STRUCTURE_EDITING.md  WEEK_8.2.8_COMPLETION.md  WEEK_8.6.1_DATA_EDITING_ENHANCEMENTS.md  build-all-platforms.ps1  build-and-run-utf8.bat  build-and-run.bat  docker-compose.yml  test-api.ps1  test-encoding.bat  test-favorites-api.ps1  test_multi_connection.md  todolist.md
backend/: Cargo.toml  check-output.txt  clippy-output.txt  run-server.bat  start-backend.bat  test_connection.rs
backend/migrations/: 001_init_local_storage.sql  002_add_environment_tag.sql
backend/src/: lib.rs  main.rs
backend/src/api/: bulk_operations.rs  mod.rs  routes.rs  routes.rs.new
backend/src/database/: connection_test.rs
backend/src/db/: local_storage.rs  mod.rs
backend/src/models/: mod.rs
backend/src/services/: ai.rs  ai_test.rs  mod.rs
backend/src/services/templates/: mod.rs  sql_explain_default.txt  sql_generation_default.txt  sql_optimize_default.txt  template_test.rs
backend/src/utils/: bson_parser.rs  db_utils.rs  mod.rs  security.rs  security_test.rs
backend/test_async/: Cargo.toml
backend/test_async/src/: main.rs
backend/tests/: api_integration_test.rs  bulk_operations_test.rs  integration_test.rs  pagination_test.rs  performance_test.rs  query_timeout_test.rs  schema_extraction_test.rs
(+92 files in other folders)
