[package]
name = "smart-sql-backend"
version = "0.1.0"
description = "智能SQLer后端服务"
authors = ["Your Name"]
edition = "2021"

[[bin]]
name = "smart-sql-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "any"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures-util = "0.3.31"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
openai-api = "0.1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4.2"
rstest = "0.18.2"
axum-test = "15.0"

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[features]
coverage = []